css/kv-apartments.css
body {
    font-size: 14px;
}

.bar rect {
    fill: #3567cc;
    shape-rendering: crispEdges;  }

.bar text {
    fill: #black;
}

.axis path, .axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

form div.unit {
    display: inline-block;
    padding: 5px 5px 10px 10px;
    vertical-align: top;
}

div.unit p, div.unit input, div.unit select {
    display: inline;
}

input.narrow_numeric {
    width: 40px;
}

div#alert span#message {
    display: none;
    color: red;
}

svg {
    min-height: 300px;
    font: 10px sans-serif;

}

#info {
    text-align: center;
}

p#p-mean {
    border-bottom: 1px dashed red;
    margin: 5px 15px;
    display: inline-block;
}

p#p-median {
    border-bottom: 1px solid red;
    margin: 5px 15px;
    display: inline-block;
}

#mean, #median {
    font-weight: bold;
}

table {
    display: none;
}

a:link, a:visited, a:hover, a:active {
    text-decoration: underline;
    color: black;
}

.blue-button {
    background-color: #3567cc;
}

button#submit_form {
    width: 100%;
}

